<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SeeSoundActivity">

    <ImageView
        android:id="@+id/iv_sound_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:contentDescription="@string/see_sound_sound_display" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_record_sound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:text="@string/see_sound_record_sound"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_display"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/see_sound_display"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>